c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/compound_assign_to_string.c
// Can't compound assign to string literal
int main(void) {
    "My string" += 1;
    return 0;
}